--- a/kadry_login.html
+++ b/kadry_login.html
@@ -2,56 +2,44 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Logowanie do kadr</title>
+  <title>Logowanie</title>
   <style>
-    body { font-family: Arial; background: #eef2f3; height: 100vh; display: grid; place-items: center; }
-    .card { background: #fff; padding: 24px; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); width: 360px; }
-    input, button { width: 100%; margin-top: 12px; padding: 10px; }
+    body { font-family: Arial, sans-serif; padding: 30px; background: #eee; }
+    input, button { display: block; margin: 10px 0; padding: 8px; width: 250px; }
   </style>
 </head>
 <body>
-  <div class="card">
-    <h2>Panel kadr – logowanie</h2>
-    <input id="login" placeholder="Login (np. ppisarczyk, admin)" />
-    <input id="pass" type="password" placeholder="Hasło" />
-    <button onclick="login()">Zaloguj</button>
-    <p id="msg"></p>
-  </div>
+  <h2>Logowanie</h2>
+  <form id="loginForm">
+    <input id="login" placeholder="Login" />
+    <input id="haslo" type="password" placeholder="Hasło" />
+    <button type="submit">Zaloguj</button>
+  </form>
 
   <script>
-    async function loadDb() {
-      const r = await fetch("/api/db");
-      if (!r.ok) throw new Error("Brak bazy");
-      return await r.json();
-    }
+    document.getElementById("loginForm").addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const login = document.getElementById("login").value;
+      const haslo = document.getElementById("haslo").value;
 
-    async function login() {
-      const u = document.getElementById("login").value.trim();
-      const p = document.getElementById("pass").value.trim();
-      const msg = document.getElementById("msg");
+      const res = await fetch('baza.json');
+      const data = await res.json();
 
-      if (u === "admin" && p === "admin3@1") {
+      if (login === "admin" && haslo === "admin3@1") {
         sessionStorage.setItem("rola", "admin");
-        sessionStorage.setItem("login", "admin");
-        location.href = "kadry.html";
+        window.location.href = "kadry.html";
         return;
       }
 
-      try {
-        const db = await loadDb();
-        const m = (db.menedzerowie || []).find(x => x.login === u && x.haslo === p);
-        if (m) {
-          sessionStorage.setItem("rola", "menedzer");
-          sessionStorage.setItem("login", m.login);
-          location.href = "kadry.html";
-        } else {
-          msg.textContent = "Niepoprawny login lub hasło.";
-        }
-      } catch (e) {
-        msg.textContent = "Błąd logowania.";
+      const manager = data.managerowie.find(m => m.login === login && m.haslo === haslo);
+      if (manager) {
+        sessionStorage.setItem("rola", "manager");
+        sessionStorage.setItem("login", login);
+        window.location.href = "kadry.html";
+      } else {
+        alert("Błędny login lub hasło");
       }
-    }
+    });
   </script>
 </body>
 </html>
