--- a/index.html
+++ b/index.html
@@ -1,58 +1,74 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <title>Wniosek urlopowy</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    body { font-family: Arial, sans-serif; padding: 20px; background: #f7f7f7; }
-    input, select, button { display: block; margin: 10px 0; padding: 8px; width: 300px; }
-  </style>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-  <h2>Formularz urlopowy</h2>
-  <form id="wniosekForm">
-    <input list="pracownicyList" id="imie" placeholder="Imię i nazwisko" required />
-    <datalist id="pracownicyList"></datalist>
-    <input type="date" id="od" required />
-    <input type="date" id="do" required />
-    <button type="submit">Wyślij wniosek</button>
-  </form>
+<body class="bg-light">
+  <div class="container py-4">
+    <h1 class="mb-4">Wniosek urlopowy</h1>
 
+    <form id="vacForm" class="row g-3 needs-validation" novalidate>
+      <div class="col-md-6">
+        <label for="empSelect" class="form-label">Pracownik</label>
+        <select id="empSelect" class="form-select" required></select>
+        <div class="invalid-feedback">Wybierz pracownika.</div>
+      </div>
+      <div class="col-md-3">
+        <label for="dateFrom" class="form-label">Od</label>
+        <input type="date" id="dateFrom" class="form-control" required>
+      </div>
+      <div class="col-md-3">
+        <label for="dateTo" class="form-label">Do</label>
+        <input type="date" id="dateTo" class="form-control" required>
+      </div>
+
+      <div class="col-12">
+        <button class="btn btn-primary" type="submit">Wyślij wniosek</button>
+        <a href="kadry.html" class="btn btn-outline-secondary ms-2">Przejdź do kadr</a>
+      </div>
+    </form>
+
+    <hr class="my-4">
+
+    <h2>Pozostało dni urlopu</h2>
+    <ul id="balanceList" class="list-group"></ul>
+  </div>
+
+  <script src="script.js"></script>
   <script>
-    async function zaladujPracownikow() {
-      const res = await fetch('baza.json');
-      const data = await res.json();
-      const list = document.getElementById("pracownicyList");
-      list.innerHTML = "";
-      data.pracownicy.forEach(p => {
-        const opt = document.createElement("option");
-        opt.value = p.imie;
-        list.appendChild(opt);
-      });
-    }
+    populateEmployeeSelect();
+    renderBalances();
 
-    document.getElementById("wniosekForm").addEventListener("submit", async (e) => {
+    document.getElementById('vacForm').addEventListener('submit', e => {
       e.preventDefault();
-      const imie = document.getElementById("imie").value;
-      const od = document.getElementById("od").value;
-      const doDnia = document.getElementById("do").value;
+      if (!e.target.checkValidity()) { e.target.classList.add('was-validated'); return; }
 
-      const res = await fetch('baza.json');
-      const data = await res.json();
-      data.wnioski.push({ imie, od, do: doDnia, status: "oczekuje" });
+      const emp = empSelect.value;
+      const od  = dateFrom.value;
+      const do_ = dateTo.value;
+      const dni = daysBetween(od, do_);
 
-      await fetch('baza.json', {
-        method: "PUT",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(data)
-      });
+      if (dni <= 0) { alert('Zakres dat musi obejmować co najmniej jeden dzień.'); return; }
 
-      alert("Wniosek wysłany!");
+      const baza = readDB();
+      const prac = baza.pracownicy.find(p => p.imie === emp);
+      if (!prac) return;
+
+      if (prac.dni_urlopowe < dni) {
+        alert(`Pracownik ma tylko ${prac.dni_urlopowe} dni urlopu!`);
+        return;
+      }
+
+      baza.wnioski.push({ imie: emp, od, do: do_, ile: dni, status: 'oczekuje' });
+      writeDB(baza);
+
+      alert('Wniosek wysłany!');
       e.target.reset();
+      renderBalances();
     });
-
-    zaladujPracownikow();
   </script>
 </body>
 </html>
