--- a/kadry.html
+++ b/kadry.html
@@ -1,135 +1,156 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8" />
-  <title>Panel Kadrowy</title>
-  <style>
-    body { font-family: Arial, sans-serif; padding: 20px; background: #fff; }
-    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-    th, td { border: 1px solid #ccc; padding: 8px; }
-    h2 { margin-top: 40px; }
-  </style>
+  <meta charset="utf-8">
+  <title>Panel kadrowy</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-  <h1>Panel Kadrowy</h1>
+<body class="bg-light">
+<div class="container py-4" id="loginBox">
+  <h1 class="mb-3">Logowanie do kadr</h1>
+  <form id="loginForm" class="row g-3" autocomplete="off">
+    <div class="col-md-6">
+      <label class="form-label">Login</label>
+      <input class="form-control" id="loginUser" required>
+    </div>
+    <div class="col-md-6">
+      <label class="form-label">Hasło</label>
+      <input type="password" class="form-control" id="loginPass" required>
+    </div>
+    <div class="col-12">
+      <button class="btn btn-primary">Zaloguj</button>
+    </div>
+  </form>
+</div>
 
-  <div id="adminPanel" style="display:none;">
-    <h2>Dodaj pracownika</h2>
-    <input id="noweImie" placeholder="Imię i nazwisko" />
-    <input id="dni" type="number" placeholder="Liczba dni urlopowych" value="20" />
-    <select id="przelozony">
-      <option value="">-- Wybierz przełożonego --</option>
-    </select>
-    <button onclick="dodajPracownika()">Dodaj</button>
+<div class="container py-4 d-none" id="panelBox">
+  <h1 class="mb-4">Kadry</h1>
+  <ul class="nav nav-tabs" id="tabBar">
+    <li class="nav-item"><button class="nav-link active" data-bs-target="#tabPrac">Pracownicy</button></li>
+    <li class="nav-item"><button class="nav-link" data-bs-target="#tabWnioski">Wnioski</button></li>
+  </ul>
 
-    <h2>Lista pracowników</h2>
-    <table id="tabelaPracownikow">
-      <thead><tr><th>Imię</th><th>Dni urlopu</th><th>Przełożony</th><th>Akcje</th></tr></thead>
-      <tbody></tbody>
-    </table>
+  <div class="tab-content border border-top-0 p-3 bg-white">
+    <!-- Pracownicy -->
+    <div class="tab-pane fade show active" id="tabPrac">
+      <h3>Lista pracowników</h3>
+
+      <form id="addEmpForm" class="row gy-2 gx-3 align-items-end mt-2 mb-3">
+        <div class="col-sm-4">
+          <label class="form-label">Imię i nazwisko</label>
+          <input class="form-control" id="empName" required>
+        </div>
+        <div class="col-sm-3">
+          <label class="form-label">Limit urlopu</label>
+          <input type="number" class="form-control" id="empLimit" min="1" value="20" required>
+        </div>
+        <div class="col-auto">
+          <button class="btn btn-success">Dodaj</button>
+        </div>
+      </form>
+
+      <table class="table table-striped" id="empTable">
+        <thead><tr><th>Pracownik</th><th>Dni urlopu</th><th>Akcje</th></tr></thead>
+        <tbody></tbody>
+      </table>
+    </div>
+
+    <!-- Wnioski -->
+    <div class="tab-pane fade" id="tabWnioski">
+      <h3>Wnioski urlopowe</h3>
+      <table class="table table-striped" id="reqTable">
+        <thead><tr><th>Pracownik</th><th>Od</th><th>Do</th><th>Dni</th><th>Status</th><th>Akcje</th></tr></thead>
+        <tbody></tbody>
+      </table>
+    </div>
   </div>
+</div>
 
-  <div id="wnioskiPanel">
-    <h2>Wnioski urlopowe</h2>
-    <table id="tabelaWnioskow">
-      <thead><tr><th>Imię</th><th>Od</th><th>Do</th><th>Status</th><th>Akcje</th></tr></thead>
-      <tbody></tbody>
-    </table>
-  </div>
+<script src="script.js"></script>
+<script>
+/* ---- Logowanie ---- */
+loginForm.addEventListener('submit', e => {
+  e.preventDefault();
+  if (loginUser.value === 'admin' && loginPass.value === 'admin3@1') {
+    loginBox.classList.add('d-none');
+    panelBox.classList.remove('d-none');
+    loadEmployees();
+    loadRequests();
+  } else alert('Nieprawidłowy login lub hasło.');
+});
+/* ---- Nawigacja zakładek ---- */
+document.getElementById('tabBar').addEventListener('click', e => {
+  if (e.target.classList.contains('nav-link')) {
+    document.querySelectorAll('#tabBar .nav-link').forEach(l => l.classList.remove('active'));
+    e.target.classList.add('active');
+    document.querySelectorAll('.tab-pane').forEach(p => p.classList.remove('show','active'));
+    document.querySelector(e.target.dataset.bsTarget).classList.add('show','active');
+  }
+});
 
-  <script>
-    let data, rola, login;
+/* ---- Pracownicy ---- */
+function loadEmployees() {
+  const baza = readDB();
+  const tbody = empTable.querySelector('tbody');
+  tbody.innerHTML = '';
+  baza.pracownicy.forEach((p,i) => {
+    tbody.insertAdjacentHTML('beforeend', `<tr>
+      <td>${p.imie}</td>
+      <td><input type="number" class="form-control form-control-sm w-75" value="${p.dni_urlopowe}" data-i="${i}"></td>
+      <td><button class="btn btn-sm btn-danger" data-del="${i}">Usuń</button></td>
+    </tr>`);
+  });
+}
+empTable.addEventListener('change', e => {
+  if (e.target.matches('input[type="number"]')) {
+    const baza = readDB();
+    baza.pracownicy[e.target.dataset.i].dni_urlopowe = Number(e.target.value);
+    writeDB(baza);
+  }
+});
+empTable.addEventListener('click', e => {
+  if (e.target.dataset.del) {
+    const baza = readDB();
+    baza.pracownicy.splice(e.target.dataset.del,1);
+    writeDB(baza); loadEmployees(); populateEmployeeSelect();
+  }
+});
+addEmpForm.addEventListener('submit', e => {
+  e.preventDefault();
+  const baza = readDB();
+  baza.pracownicy.push({ imie: empName.value.trim(), dni_urlopowe: Number(empLimit.value) });
+  writeDB(baza); addEmpForm.reset(); loadEmployees(); populateEmployeeSelect();
+});
 
-    async function wczytajDane() {
-      const res = await fetch('baza.json');
-      data = await res.json();
-      rola = sessionStorage.getItem("rola");
-      login = sessionStorage.getItem("login");
-
-      if (rola === "admin") {
-        document.getElementById("adminPanel").style.display = "block";
-        const przel = document.getElementById("przelozony");
-        data.managerowie.forEach(m => {
-          const opt = document.createElement("option");
-          opt.value = m.login;
-          opt.textContent = m.login;
-          przel.appendChild(opt);
-        });
-      }
-
-      pokazPracownikow();
-      pokazWnioski();
-    }
-
-    function pokazPracownikow() {
-      const tbody = document.querySelector("#tabelaPracownikow tbody");
-      tbody.innerHTML = "";
-      if (rola !== "admin") return;
-
-      data.pracownicy.forEach(p => {
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td>${p.imie}</td>
-          <td>${p.dni}</td>
-          <td>${p.szef || ""}</td>
-          <td><button onclick="usunPracownika('${p.imie}')">Usuń</button></td>`;
-        tbody.appendChild(tr);
-      });
-    }
-
-    function pokazWnioski() {
-      const tbody = document.querySelector("#tabelaWnioskow tbody");
-      tbody.innerHTML = "";
-      data.wnioski.forEach((w, i) => {
-        const prac = data.pracownicy.find(p => p.imie === w.imie);
-        if (rola === "manager" && prac?.szef !== login) return;
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td>${w.imie}</td>
-          <td>${w.od}</td>
-          <td>${w.do}</td>
-          <td>${w.status}</td>
-          <td>
-            <button onclick="zmienStatus(${i}, 'zaakceptowany')">Akceptuj</button>
-            <button onclick="zmienStatus(${i}, 'odrzucony')">Odrzuć</button>
-          </td>`;
-        tbody.appendChild(tr);
-      });
-    }
-
-    async function dodajPracownika() {
-      const imie = document.getElementById("noweImie").value;
-      const dni = parseInt(document.getElementById("dni").value);
-      const szef = document.getElementById("przelozony").value;
-
-      data.pracownicy.push({ imie, dni, szef });
-      await zapisz();
-
-      pokazPracownikow();
-      alert("Dodano pracownika");
-    }
-
-    async function usunPracownika(imie) {
-      data.pracownicy = data.pracownicy.filter(p => p.imie !== imie);
-      await zapisz();
-      pokazPracownikow();
-    }
-
-    async function zmienStatus(index, status) {
-      data.wnioski[index].status = status;
-      await zapisz();
-      pokazWnioski();
-    }
-
-    async function zapisz() {
-      await fetch('baza.json', {
-        method: "PUT",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(data)
-      });
-    }
-
-    wczytajDane();
-  </script>
+/* ---- Wnioski ---- */
+function loadRequests() {
+  const tbody = reqTable.querySelector('tbody');
+  tbody.innerHTML = '';
+  readDB().wnioski.forEach((w,i) => {
+    tbody.insertAdjacentHTML('beforeend', `<tr>
+      <td>${w.imie}</td><td>${w.od}</td><td>${w.do}</td><td>${w.ile}</td>
+      <td>${w.status}</td>
+      <td>
+        ${w.status==='oczekuje'?`
+          <button class="btn btn-sm btn-success" data-ok="${i}">Akceptuj</button>
+          <button class="btn btn-sm btn-warning" data-no="${i}">Odrzuć</button>`: ''}
+      </td>
+    </tr>`);
+  });
+}
+reqTable.addEventListener('click', e => {
+  const baza = readDB();
+  const idx = e.target.dataset.ok ?? e.target.dataset.no;
+  if (idx==null) return;
+  const wniosek = baza.wnioski[idx];
+  if (e.target.dataset.ok) { // akceptacja
+    const prac = baza.pracownicy.find(p=>p.imie===wniosek.imie);
+    if (prac) prac.dni_urlopowe -= wniosek.ile;
+    wniosek.status = 'zaakceptowany';
+  } else wniosek.status = 'odrzucony';
+  writeDB(baza); loadRequests(); loadEmployees(); renderBalances();
+});
+</script>
 </body>
 </html>
