--- a/kadry.html
+++ b/kadry.html
@@ -7,7 +7,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
-  <!-- Sekcja logowania -->
   <div class="container py-4" id="loginBox">
     <h1 class="mb-3">Logowanie do kadr</h1>
     <form id="loginForm" class="row g-3" autocomplete="off">
@@ -25,7 +24,6 @@
     </form>
   </div>
 
-  <!-- Panel po zalogowaniu -->
   <div class="container py-4 d-none" id="panelBox">
     <h1 class="mb-4">Panel kadrowy</h1>
     <ul class="nav nav-tabs" id="tabBar">
@@ -38,7 +36,6 @@
     </ul>
 
     <div class="tab-content p-3 bg-white border border-top-0">
-      <!-- Zakładka Pracownicy -->
       <div class="tab-pane show active" id="tabPrac">
         <h3>Lista pracowników</h3>
         <form id="addEmpForm" class="row gy-2 gx-3 align-items-end mt-2 mb-3">
@@ -59,20 +56,15 @@
           </div>
         </form>
         <table class="table" id="empTable">
-          <thead>
-            <tr><th>Pracownik</th><th>Dni urlopu</th><th>Menedżer</th><th>Usuń</th></tr>
-          </thead>
+          <thead><tr><th>Pracownik</th><th>Dni urlopu</th><th>Menedżer</th><th>Usuń</th></tr></thead>
           <tbody></tbody>
         </table>
       </div>
 
-      <!-- Zakładka Wnioski -->
       <div class="tab-pane" id="tabWnios">
         <h3>Wnioski urlopowe</h3>
         <table class="table" id="reqTable">
-          <thead>
-            <tr><th>Pracownik</th><th>Od</th><th>Do</th><th>Dni</th><th>Status</th><th>Akcje</th></tr>
-          </thead>
+          <thead><tr><th>Pracownik</th><th>Od</th><th>Do</th><th>Dni</th><th>Status</th><th>Akcje</th></tr></thead>
           <tbody></tbody>
         </table>
       </div>
@@ -80,42 +72,5 @@
   </div>
 
   <script src="script.js"></script>
-  <script>
-    // Obsługa logowania z wypełnieniem select menedżerów
-    loginForm.addEventListener('submit', async e => {
-      e.preventDefault();
-      const user = loginUser.value.trim();
-      const pass = loginPass.value.trim();
-      let isAdmin = false;
-      let isMgr   = false;
-      let mgrName = null;
-
-      if (user === 'admin' && pass === 'admin3@1') {
-        isAdmin = true;
-      } else {
-        const m = MANAGERS.find(m=>m.login===user && m.password===pass);
-        if (m) { isMgr = true; mgrName = m.login; }
-      }
-      if (!isAdmin && !isMgr) { alert('Błędny login/hasło'); return; }
-
-      loginBox.classList.add('d-none');
-      panelBox.classList.remove('d-none');
-
-      // Wczytujemy dane i uzupełniamy UI
-      await loadDB();
-      if (isAdmin) {
-        populateManagerSelect();   // wypełniamy listę menedżerów
-        loadEmployees();
-        renderBalances();
-        loadRequests();
-      } else {
-        tabPracNav.style.display = 'none';
-        renderBalances();
-        loadRequests(mgrName);
-      }
-    });
-
-    // Obsługa zakładek i dodawania pracowników pozostaje bez zmian
-  </script>
 </body>
 </html>
