--- a/kadry.html
+++ b/kadry.html
@@ -1,22 +1,13 @@
-<!DOCTYPE html>
-<html lang="pl">
-<head>
-  <meta charset="utf-8"/>
-  <title>Panel kadrowy</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-light">
-  <div class="container py-4" id="loginBox">
+py-4" id="loginBox">
     <h1 class="mb-3">Logowanie do kadr</h1>
     <form id="loginForm" class="row g-3" autocomplete="off">
       <div class="col-md-6">
         <label class="form-label">Login</label>
-        <input id="loginUser" class="form-control" required>
+        <input id="loginUser" class="form-control" required />
       </div>
       <div class="col-md-6">
         <label class="form-label">Hasło</label>
-        <input type="password" id="loginPass" class="form-control" required>
+        <input type="password" id="loginPass" class="form-control" required />
       </div>
       <div class="col-12">
         <button class="btn btn-primary">Zaloguj</button>
@@ -24,6 +15,7 @@
     </form>
   </div>
 
+  <!-- Panel po zalogowaniu -->
   <div class="container py-4 d-none" id="panelBox">
     <h1 class="mb-4">Panel kadrowy</h1>
     <ul class="nav nav-tabs" id="tabBar">
@@ -36,16 +28,17 @@
     </ul>
 
     <div class="tab-content p-3 bg-white border border-top-0">
+      <!-- Zakładka Pracownicy -->
       <div class="tab-pane show active" id="tabPrac">
         <h3>Lista pracowników</h3>
         <form id="addEmpForm" class="row gy-2 gx-3 align-items-end mt-2 mb-3">
           <div class="col-sm-3">
             <label class="form-label">Imię i nazwisko</label>
-            <input id="empName" class="form-control" required>
+            <input id="empName" class="form-control" required />
           </div>
           <div class="col-sm-2">
             <label class="form-label">Limit urlopu</label>
-            <input type="number" id="empLimit" class="form-control" min="1" value="20" required>
+            <input type="number" id="empLimit" class="form-control" min="1" value="20" required />
           </div>
           <div class="col-sm-3">
             <label class="form-label">Menedżer</label>
@@ -61,6 +54,7 @@
         </table>
       </div>
 
+      <!-- Zakładka Wnioski -->
       <div class="tab-pane" id="tabWnios">
         <h3>Wnioski urlopowe</h3>
         <table class="table" id="reqTable">
